--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Partha Sarathi Mishra"
+title                    : "Personal Website"
 title_separator          : "-"
 name                     : &name "Partha Sarathi Mishra"
 description              : &description "personal description"
 url                      : https://parthamishra1996.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "parthamishra1996/parthamishra1996.github.io"
-teaser                   :  HeadShot # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : HeadShot # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Partha Sarathi Mishra"
+  avatar           : "Headshot.png"
+  bio              : "PhD candidate in Operations Management at Kellogg School of Management, Northwestern University"
+  location         : "Evanston, Illinois"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "partha.mishra@kellogg.northwestern.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
