--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Partha Sarathi Mishra"
-  avatar           : "images/Headshot.png"
-  bio              : "PhD candidate in Operations Management at Kellogg School of Management, Northwestern University"
+  avatar           : "images/bio-photo.jpg"
+  bio              : "PhD candidate, Kellogg School of Management, Northwestern University"
   location         : "Evanston, Illinois"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
