--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ title                    : "Personal Website"
 title_separator          : "-"
 name                     : &name "Partha Sarathi Mishra"
 description              : &description "personal description"
-url                      : https://parthamishra1996.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://parthamishra1996.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "parthamishra1996/parthamishra1996.github.io"
-teaser                   : HeadShot # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : "/images/HeadShot.png" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -81,40 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Partha Sarathi Mishra"
-  avatar           : "images/bio-photo.jpg"
-  bio              : "PhD candidate, Kellogg School of Management, Northwestern University"
-  location         : "Evanston, Illinois"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  avatar           : "/images/HeadShot.png"
+  bio              : "PhD candidate in Operations at Kellogg, Northwestern University"
+  location         : "Evanston, Illinois, USA"
   email            : "partha.mishra@kellogg.northwestern.edu"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              :
-  bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
-  facebook         :
-  foursquare       :
-  github           : "academicpages"
-  google_plus      :
-  keybase          :
-  instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
-  pinterest        :
-  soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  twitter          : "replacethistwitterhandle"
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        :
 
 
 # Reading Files
