--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Partha Sarathi Mishra"
-  avatar           : "/images/HeadShot.png"
+  avatar           : "/images/profile.png"
   bio              : "PhD candidate in Operations at Kellogg, Northwestern University"
-  location         : "Evanston, Illinois, USA"
+  location         : "Evanston, IL, USA"
   email            : "partha.mishra@kellogg.northwestern.edu"
 
 
