--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,7 @@
 main:
   - title: "CV"
     url: /cv/
-
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
        
-  - title: "Blog Posts"
+  - title: "Blog"
     url: /year-archive/
 
