rearrangements to improve appearance

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,10 @@
-# main links links
+# main links
 main:
   - title: "CV"
     url: /cv/
-       
+
+  - title: "Research"
+    url: /publications/
+  
   - title: "Blog"
     url: /year-archive/
-
