--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "PhD candidate in Operations at Kellogg, Northwestern University"
   location         : "Evanston, IL, USA"
   email            : "partha.mishra@kellogg.northwestern.edu"
-  linkedin         : "www.linkedin.com/in/partha-sarathi-mishra-kellogg"
+  linkedin         : "partha-sarathi-mishra-kellogg"
 
 
 # Reading Files
