Adding CV in pdf

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "CV"
-    url: /cv/
+    url: /_pages/CV_Mar22.pdf
 
   - title: "Research"
     url: /publications/
